setShoot and playGame